# CDMF

./: .gitignore  CLAUDE.md  Dockerfile  docker-run.bat
workspace/: CMakeLists.txt  build.sh
workspace/config/: framework.json
workspace/design/diagrams/: 01_system_architecture.puml  02_component_classes.puml  03_sequence_diagrams.puml  04_service_registry.puml  05_ipc_architecture.puml  06_module_lifecycle.puml  07_security_architecture.puml  08_data_structures.puml
workspace/docs/architecture/: ipc_framework_integration_guide.md  shared_memory_ring_buffer_deep_dive.md
workspace/docs/development/: create_simple_service.md  process_sandbox_implementation.md  service_development_guide.md
workspace/docs/devops/: build_and_verify.md
workspace/docs/examples/hello_service_module/: CMakeLists.txt  hello_service_activator.cpp  hello_service_impl.cpp  hello_service_impl.h  manifest.json
workspace/docs/implementation/: service_call_implementation_summary.md
workspace/docs/modules/: config_service_analysis.md
workspace/docs/quick_start/: ipc_integration_quick_start.md
workspace/docs/user/: command_info_feature.md  command_interface_guide.md
workspace/src/framework/: CMakeLists.txt  main.cpp
workspace/src/framework/impl/: cdmf.cpp
workspace/src/framework/impl/config/: configuration_admin_impl.cpp  configuration_event.cpp  configuration_impl.cpp
workspace/src/framework/impl/core/: event.cpp  event_dispatcher.cpp  event_filter.cpp  framework.cpp  framework_properties.cpp
workspace/src/framework/impl/ipc/: circuit_breaker.cpp  connection_manager.cpp  connection_pool.cpp  flatbuffers_serializer.cpp  grpc_transport.cpp  health_checker.cpp  message.cpp  metadata.cpp  protobuf_serializer.cpp  proxy_factory.cpp  reflection_proxy_generator.cpp  retry_policy.cpp  ring_buffer.cpp  serializer.cpp  serializer_factory.cpp  service_proxy.cpp  service_proxy_factory.cpp  service_stub.cpp  shared_memory_transport.cpp  transport.cpp  unix_socket_transport.cpp
workspace/src/framework/impl/module/: dependency_graph.cpp  dependency_resolver.cpp  manifest_parser.cpp  module_handle.cpp  module_impl.cpp  module_registry.cpp  module_reloader.cpp
workspace/src/framework/impl/platform/: linux_loader.cpp  platform_abstraction.cpp  windows_loader.cpp
workspace/src/framework/impl/security/: code_verifier.cpp  permission.cpp  permission_manager.cpp  resource_limiter.cpp  sandbox_ipc.cpp  sandbox_manager.cpp  sandbox_module_loader.cpp
workspace/src/framework/impl/service/: service_entry.cpp  service_event.cpp  service_reference.cpp  service_registration.cpp  service_registry.cpp
workspace/src/framework/impl/utils/: command_handler.cpp  file_watcher.cpp  properties.cpp  thread_pool.cpp  version.cpp  version_manager.cpp  version_range.cpp
workspace/src/framework/include/config/: configuration.h  configuration_admin.h  configuration_admin_impl.h  (+3 more)
workspace/src/framework/ipc/: message.fbs  message.proto
workspace/src/modules/calculator_module/: CMakeLists.txt  calculator_activator.cpp  calculator_service.cpp  calculator_service.h  manifest.json
workspace/src/modules/config_service_module/: CMakeLists.txt  config_service_activator.cpp  configuration.cpp  configuration.h  configuration_admin.cpp  configuration_admin.h  configuration_event.cpp  configuration_event.h  configuration_listener.h  configuration_types.h  manifest.json  persistence_manager.cpp  persistence_manager.h
workspace/src/modules/consumer_module/: CMakeLists.txt  consumer_activator.cpp  manifest.json
workspace/src/modules/hello_service_module/: CMakeLists.txt  hello_service.h  hello_service_activator.cpp  hello_service_activator.h  hello_service_impl.cpp  hello_service_impl.h  manifest.json
workspace/src/modules/shm_consumer_service/: CMakeLists.txt  manifest.json  shm_consumer_service.h  shm_consumer_service_activator.cpp  shm_consumer_service_activator.h  shm_consumer_service_impl.cpp  shm_consumer_service_impl.h
workspace/src/modules/shm_producer_service/: CMakeLists.txt  manifest.json  shm_producer_service.h  shm_producer_service_activator.cpp  shm_producer_service_activator.h  shm_producer_service_impl.cpp  shm_producer_service_impl.h
workspace/src/modules/unix_socket_client_service/: CMakeLists.txt  manifest.json  unix_socket_client_service.h  unix_socket_client_service_activator.cpp  unix_socket_client_service_activator.h  unix_socket_client_service_impl.cpp  unix_socket_client_service_impl.h
workspace/src/modules/unix_socket_server_service/: CMakeLists.txt  manifest.json  unix_socket_server_service.h  unix_socket_server_service_activator.cpp  unix_socket_server_service_activator.h  unix_socket_server_service_impl.cpp  unix_socket_server_service_impl.h
workspace/tests/: CMakeLists.txt
workspace/tests/automation_test/: CMakeLists.txt  README.md  test-scenarios.md
workspace/tests/automation_test/src/: automation_manager.cpp  automation_manager.h  config_analyzer.cpp  config_analyzer.h  log_analyzer.cpp  log_analyzer.h
workspace/tests/automation_test/testcases/: test_automation_system.cpp
workspace/tests/unit/: CMakeLists.txt  test_blocking_queue.cpp  test_circuit_breaker.cpp  test_code_verifier.cpp  test_command_handler.cpp  test_configuration.cpp  test_connection_management.cpp  test_dependency_graph.cpp  test_dependency_resolver.cpp  test_dynamic_loaders.cpp  test_event.cpp  test_event_dispatcher.cpp  test_file_watcher.cpp  test_framework_properties.cpp  test_manifest_parser.cpp  test_message.cpp  test_module.cpp  test_module_handle.cpp  test_module_registry.cpp  test_module_reloader.cpp  test_module_types.cpp  test_permission.cpp  test_permission_manager.cpp  test_platform_abstraction.cpp  test_properties.cpp  test_proxy_factory.cpp  test_proxy_generator.cpp  test_proxy_stub.cpp  test_reliability.cpp  test_resource_limiter.cpp  test_ring_buffer.cpp  test_sandbox_manager.cpp  test_serializers.cpp  test_service_proxy_factory.cpp  test_service_reference.cpp  test_service_registration.cpp  test_service_registry.cpp  test_service_tracker.cpp  test_thread_pool.cpp  test_transports.cpp  (+2 more)
(+174 files in other folders)
